# nawa-web-os

./: .gitignore  README.md  worklog.md
.github/workflows/: docs.yml  rust.yml
download/: NAWA-MANIFESTO.md
download/nawa-v0.1.0-alpha.2/: nawa-cli-linux-x86_64
download/nawa-v0.1.0-alpha.3/: nawa-cli-linux-x86_64
nawa-rs/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.all-in-one  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0-alpha.2.md  docker-compose.all-in-one.yml  docker-compose.yml
nawa-rs/crates/nawa-aion/: Cargo.toml
nawa-rs/crates/nawa-aion/src/: google_search_console.rs  healing.rs  lib.rs  negotiation.rs  ontology.rs  photon.rs
nawa-rs/crates/nawa-auth/: Cargo.toml
nawa-rs/crates/nawa-auth/src/: jwt.rs  lib.rs  password.rs  rbac.rs  store.rs
nawa-rs/crates/nawa-cli/: Cargo.toml
nawa-rs/crates/nawa-cli/src/: main.rs
nawa-rs/crates/nawa-db/: Cargo.toml
nawa-rs/crates/nawa-db/benches/: db_ops.rs
nawa-rs/crates/nawa-db/src/: bloom.rs  compaction.rs  engine.rs  lib.rs  memtable.rs  skip_list.rs  sstable.rs  wal.rs
nawa-rs/crates/nawa-db/tests/: integration.rs
nawa-rs/crates/nawa-engine/: Cargo.toml
nawa-rs/crates/nawa-engine/src/: components.rs  design.rs  lib.rs  pipeline.rs  zerocopy_html.rs
nawa-rs/crates/nawa-frontend/: Cargo.toml
nawa-rs/crates/nawa-frontend/src/: html.rs  island.rs  lib.rs  stream.rs  template.rs
nawa-rs/crates/nawa-http/: Cargo.toml
nawa-rs/crates/nawa-http/src/: acme.rs  h3.rs  lib.rs  router.rs  server.rs  tls.rs
nawa-rs/crates/nawa-http/tests/: h3_integration.rs  integration.rs
nawa-rs/crates/nawa-kernel/: Cargo.toml
nawa-rs/crates/nawa-kernel/src/: io_uring.rs  lib.rs  mmap.rs  ring_buffer.rs  zero_copy.rs
nawa-rs/crates/nawa-svelte/: Cargo.toml
nawa-rs/crates/nawa-svelte/src/: handler.rs  lib.rs  manifest.rs  renderer.rs
nawa-rs/crates/nawa-uring/: Cargo.toml
nawa-rs/crates/nawa-uring/benches/: uring_ops.rs
nawa-rs/crates/nawa-uring/src/: lib.rs  opcode.rs  pipeline.rs  registered.rs  sqpoll.rs
nawa-rs/crates/nawa-uring/tests/: integration.rs  real_files.rs
nawa-rs/crates/nawa-wasm/: Cargo.toml
nawa-rs/crates/nawa-wasm/src/: lib.rs  plugin.rs  runtime.rs  ssr.rs
nawa-rs/crates/nawad/: Cargo.toml
nawa-rs/crates/nawad/benches/: nawa_benchmarks.rs
nawa-rs/crates/nawad/src/: acl.rs  admin.rs  cache.rs  config.rs  cookies.rs  dashboard.rs  errors.rs  feature_flags.rs  i18n.rs  logging.rs  main.rs  metrics.rs  middleware.rs  migrations.rs  notifications.rs  openapi.rs  plugins.rs  pubsub.rs  quantum.rs  rate_limiter.rs  realtime.rs  req_tracing.rs  scheduler.rs  session.rs  stability.rs  webhooks.rs
nawa-rs/docs/: book.toml
nawa-rs/docs/src/: SUMMARY.md  introduction.md  manifesto.md  quick-start.md
nawa-rs/docs/src/architecture/: cli.md  db.md  http.md  kernel.md  nawad.md  overview.md  uring.md  wasm.md
nawa-rs/docs/src/community/: contributing.md  faq.md  roadmap.md
nawa-rs/docs/src/guides/: create-project.md  database.md  deployment.md  dev-workflow.md  monitoring.md  plugins.md  tls.md
nawa-rs/docs/src/reference/: api.md  cli.md  config.md  performance.md
nawa-rs/examples/auth-site/: Cargo.toml
nawa-rs/examples/auth-site/src/: main.rs
nawa-rs/examples/blog-site/: Cargo.toml
nawa-rs/examples/blog-site/src/: main.rs
nawa-rs/examples/svelte-app/: index.html  package-lock.json  package.json  post-build.js  tsconfig.json  vite.config.js
nawa-rs/examples/svelte-app/src/: App.svelte  Counter.svelte  LiveStats.svelte  NawaState.svelte  QuantumViz.svelte  app.css  main.ts
nawa-rs/examples/svelte-demo/_nawa/: manifest.json
nawa-rs/examples/svelte-demo/_nawa/assets/: app.css  app.js
nawa-rs/examples/svelte-demo/_nawa/pages/: about.html  index.html  spa.html
nawa-rs/examples/wasm-ssr-module/: Cargo.toml  README.md  nawa_ssr_demo.wasm
nawa-rs/examples/wasm-ssr-module/src/: lib.rs
nawa-rs/integrations/sveltekit-adapter/: README.md  index.cjs  index.js  package.json
nawa-rs/scripts/: entrypoint.sh  install.sh
nawa-rs/templates/basic/: README.md  nawa.toml
scripts/: aion_test.sh  e2e_test.sh  full_e2e_test.sh  render_nawa_ui.py  svelte_test.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/nawa/: AppBuilder.tsx  Architecture.tsx  BuildFirstWebsite.tsx  CLISimulator.tsx  Changelog.tsx  CodePlayground.tsx  Concept.tsx  CostCalculator.tsx  DatabaseDemo.tsx  DeveloperExperience.tsx  DockerDeployment.tsx  Ecosystem.tsx  FAQ.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  MemoryLayout.tsx  MigrationGuide.tsx  Navigation.tsx  Observability.tsx  PerformanceDashboard.tsx  PluginMarketplace.tsx  RequestFlow.tsx  Roadmap.tsx  ScrollProgress.tsx  SecurityLayer.tsx  StackComparison.tsx  Testimonials.tsx  Timeline.tsx  UseCases.tsx  ZeroCopyKernel.tsx
tool-results/: bash_1783263018917_65dd5626bcd5.txt  bash_1783542539833_8bf25d7004ea.txt
