[package]
name = "nawa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAWA CLI — create, develop, and deploy NAWA projects"

[[bin]]
name = "nawa"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
