[package]
name = "nawa-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAWA Unified Engine — zero-copy DB→SSR→HTTP pipeline + built-in UI system"

[dependencies]
nawa-kernel = { path = "../nawa-kernel" }
nawa-db = { path = "../nawa-db" }
nawa-frontend = { path = "../nawa-frontend" }
nawa-uring = { path = "../nawa-uring" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3.14"
