[package]
name = "nawa-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAWA HTTP server + type-safe router"

[dependencies]
nawa-kernel = { path = "../nawa-kernel" }
nawa-db = { path = "../nawa-db" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
chrono.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
quinn.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
bytes-utils.workspace = true

[dev-dependencies]
tempfile = "3.14"
