[package]
name = "nawad"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAWA daemon binary — HTTP server + DB + kernel"

[[bin]]
name = "nawad"
path = "src/main.rs"

[[bench]]
name = "nawa_benchmarks"
harness = false
path = "benches/nawa_benchmarks.rs"

[dependencies]
nawa-kernel = { path = "../nawa-kernel" }
nawa-db = { path = "../nawa-db" }
nawa-http = { path = "../nawa-http", default-features = false, features = ["http3"] }
nawa-uring = { path = "../nawa-uring" }
nawa-wasm = { path = "../nawa-wasm" }
nawa-auth = { path = "../nawa-auth" }
nawa-engine = { path = "../nawa-engine" }
nawa-svelte = { path = "../nawa-svelte" }
nawa-aion = { path = "../nawa-aion" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
prometheus.workspace = true
sha2 = { version = "0.10", features = ["oid"] }
sha1 = "0.10"
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.14"
