[package]
name = "auth-site"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Example auth website with NAWA"

[[bin]]
name = "auth-site"
path = "src/main.rs"

[dependencies]
nawa-db = { path = "../../crates/nawa-db" }
nawa-auth = { path = "../../crates/nawa-auth" }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
