[package]
name = "nawa-ssr-demo"
version = "0.1.0"
edition = "2021"
description = "WASM SSR module for NAWA — renders HTML from JSON props"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Keep this package independent from the main NAWA workspace
# (it compiles to a different target: wasm32-unknown-unknown)
[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
